# cs185c-fall2024

./: .gitignore  LICENSE  README.md  pyproject.toml
homework/homework-03/: hw03-visualizing-data-with-movies.ipynb
homework/homework_02/: hw02_us_boundary_currents.ipynb
homework/homework_05/: hw05_ups_and_downs_of_discretization.ipynb
homework/homework_06/: hw6_advection_and_diffusion.ipynb
homework/homework_07/: hw07_unix_environments_and_mitgcm.ipynb
homework/homework_08/: HW8 An MITgcm Tutorial Experiment.ipynb
homework/homework_09/: README.md
homework/homework_1/: HW1 Jupyter and Python Demo.ipynb
homework/homework_2/: HW2 US Boundary Currents.ipynb
homework/homework_3/: HW3 Visualizing Data with Movies.ipynb
homework/homework_4/: HW4 Sea Level Rise.ipynb
homework/homework_7/: HW7 Unix Environments and MITgcm.ipynb
project/: README.md
project/code/: CPP_OPTIONS.h  SIZE.h  packages.conf
project/issues/: README.md
project/namelist/: data  data.cal  data.diagnostics  data.exf  data.ggl90  data.gmredi  data.pkg  data_append01  eedata
project/notebooks/: 01-creating-the-model-grid.ipynb  02-creating-the-bathymetry.ipynb  03-creating-the-initial-conditions.ipynb  04-creating-external-forcing-conditions.ipynb  04-jvm-creating-external-forcing-conditions.ipynb  nb01_model_grid.ipynb  nb02_bathymetry.ipynb  nb03_initial_conditions.ipynb  nb04_external_forcing_conditions.ipynb
