[project]
name = "cs185c"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.24.1",
    "cmocean>=4.0.3",
    "ffmpeg>=1.4",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "moviepy>=2.1.2",
    "netcdf4>=1.7.2",
    "notebook>=7.4.1",
    "numpy>=2.2.5",
    "scipy>=1.15.2",
    "xarray>=2025.3.1",
]
