[project]
name = "cs185c"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.24.1",
    "cmocean>=4.0.3",
    "ffmpeg>=1.4",
    "jax>=0.6.0",
    "joblib>=1.5.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "moviepy>=2.1.2",
    "nbqa>=1.9.1",
    "netcdf4>=1.7.2",
    "notebook>=7.4.1",
    "numba>=0.62.1",
    "ruff>=0.11.9",
    "scipy>=1.15.2",
    "scipy-stubs>=1.16.3.0",
    "tqdm>=4.67.1",
    "xarray>=2025.3.1",
]
